# navis_web_env

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  smoke-test-space-ws.py  smoke-test-space.ps1  tmp2.txt  tmp3.txt  tmp4.txt  tmp5.txt  tmp_patch_test.py  tmp_test_output.txt  tmp_test_output_utf8.txt  validate-submission.sh
navis_web_env/: __init__.py  client.py  grading.py  models.py  openenv_compat.py  reporting.py  site_loader.py
navis_web_env/server/: app.py  navis_web_environment.py
navis_web_env/sites/: site_adversarial.json  site_expert.json  site_hard.json  site_medium.json
outputs/evals/: baseline.json  dashboard.html  report.json  report.md
outputs/evals/trajectories/: heuristic-adversarial.md  heuristic-easy.md  heuristic-expert.md  heuristic-hard.md  heuristic-medium.md  oracle-adversarial.md  oracle-easy.md  oracle-expert.md  oracle-hard.md  oracle-medium.md
results/: heu_tst.txt  orc_tst.txt
scripts/: evaluate.py
server/: Dockerfile  __init__.py  app.py  navis_web_environment.py  requirements.txt
tasks/: models.py
tasks/server/: __init__.py  app.py
tasks/sites/: site_easy.json
tests/: test_inference.py  test_navis_web_env.py  test_navis_web_env_functionality.py  test_reporting.py
