[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navis-web-env"
version = "0.1.0"
description = "Deterministic OpenEnv environment for web wayfinding tasks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "openenv-core[core]>=0.1.0",
  "pydantic>=2.5.0",
  "requests>=2.31.0",
  "uvicorn>=0.24.0",
]

[project.scripts]
server = "navis_web_env.server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["navis_web_env*"]
